--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script src="js/js"></script>
+    <title>Rock, paper, scissors game.</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <script src="scripts/script" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="page-wrapper">
+   <main>
+      <div class="results-wrapper">
+        <p id="playerDisplay">Player Score: </p>
+        <p id="computerDisplay">Computer Score: </p>
+        <p id="roundDisplay">Round: </p>
+        <p id="generalDisplay">Click to start game</p>
+      </div>
+      <div id="btn-shapes">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+      </div>
+      <button id="btnReset">Reset game</button>
+    </main>
+    </div>
+  </body>
 </html>
